<resources>
    <string name="app_name">Bluetooth</string>
    <string name="blank"></string>
    <string name="cancel">Cancel</string>
    <string name="ppl_add">+</string>
    <string name="ppl_del">-</string>
    <string name="services_header">Available services</string>
    <string name="select_device">Select</string>
    <string name="discover_services">Discover</string>
    <string name="clear">Clear</string>
    <string name="list_empty">No records found!</string>
    <string name="dialog_title_create_msg_filter">Create message filter:</string>
    <string name="dialog_title_pick_date_time">Pick date and time:</string>
    <string name="title_hfp_test">HFP Dialer</string>
    <string name="title_pbap_test">PBAP Test</string>
    <string name="title_map_test">MAP Test</string>
    <string name="title_avrcp_test">AVRCP</string>
    <string name="title_vcard_filter">Filter Attributes</string>
    <string name="title_message_filter">Select Message Parameters</string>
    <string name="phonebook_prompt">Choose a phonebook:</string>
    <string name="vcard_format_prompt">Choose a vCard format:</string>
    <string name="max_list_count_prompt">MaxListCount:</string>
    <string name="vcard_header_prompt">vCard header:</string>
    <string name="offset_prompt">Offset value:</string>
    <string name="search">Search</string>
    <string name="getsize">Get size</string>
    <string name="abort">Abort</string>
    <string name="pbap_session_key_dialog_header">OBEX session key required</string>
    <string name="pbap_session_key_dialog_title">Type session key for %1$s</string>
    <string name="pbap_authentication_timeout_message">There was time out to input session key with %1$s</string>
    <string name="auth_notif_ticker">OBEX authentication request</string>
    <string name="auth_notif_title">Session key</string>
    <string name="auth_notif_message">Type session key for %1$s</string>
    <string name="get_vcard">Get vCard</string>
    <string name="search_attribute_prompt">Search Attribute:</string>
    <string name="search_value_prompt">Search Value:</string>
    <string name="search_attribute_name">Name</string>
    <string name="search_attribute_number">Number</string>
    <string name="order_attribute_unordered">Default</string>
    <string name="order_attribute_alphabetical">Alphabetical</string>
    <string name="order_attribute_indexed">Indexed</string>
    <string name="order_attribute_phonetic">Phonetic</string>
    <string name="search_attribute_sound">Sound</string>
    <string name="filter_button">Select Filter Attributes</string>
    <string name="filter_field_version">vCard Version</string>
    <string name="filter_field_fn">Formatted Name</string>
    <string name="filter_field_n">Structured Presentation of Name</string>
    <string name="filter_field_photo">Associated Image or Photo</string>
    <string name="filter_field_bday">Birthday</string>
    <string name="filter_field_adr">Delivery Address</string>
    <string name="filter_field_label">Delivery</string>
    <string name="filter_field_tel">Telephone Number</string>
    <string name="filter_field_email">Electronic Mail Address</string>
    <string name="filter_field_mailer">Electronic Mail</string>
    <string name="filter_field_tz">Time Zone</string>
    <string name="filter_field_geo">Geographic Position</string>
    <string name="filter_field_title">Job</string>
    <string name="filter_field_role">Role within the Organization</string>
    <string name="filter_field_logo">Organization Logo</string>
    <string name="filter_field_agent">vCard of Person Representing</string>
    <string name="filter_field_org">Name of Organization</string>
    <string name="filter_field_note">Comments</string>
    <string name="filter_field_rev">Revision</string>
    <string name="filter_field_sound">Pronunciation of Name</string>
    <string name="filter_field_url">Uniform Resource Locator</string>
    <string name="filter_field_uid">Unique ID</string>
    <string name="filter_field_key">Public Encryption Key</string>
    <string name="filter_field_nickname">Nickname</string>
    <string name="filter_field_categories">Categories</string>
    <string name="filter_field_proid">Product ID</string>
    <string name="filter_field_class">Class information</string>
    <string name="filter_field_sort_string">String used for sorting operations</string>
    <string name="filter_field_x_irmc_call_datetime">Time stamp</string>
    <string name="filter_field_filter">Indicates the usage of a filter</string>
    <string name="vcard21">vCard 2.1</string>
    <string name="vcard30">vCard 3.0</string>
    <string name="set_phonebook">SetPhonebook</string>
    <string name="msgflag_text">TEXT</string>
    <string name="msgflag_read">READ</string>
    <string name="msgflag_sent">SENT</string>
    <string name="msgflag_drm">DRM</string>
    <string name="msgflag_prio">PRIO</string>
    <string name="map_goto_inbox">go to inbox</string>
    <string name="map_goto_outbox">go to outbox</string>
    <string name="map_goto_draft">go to draft</string>
    <string name="map_msg_copy_to_editor_lbl">Copy &gt;</string>
    <string name="map_msg_push_lbl">Push message &gt;</string>
    <string name="map_msg_push_transparent_lbl">transparent</string>
    <string name="map_msg_push_retry_lbl">retry</string>
    <string name="charset_native_lbl">native</string>
    <string name="charset_utf8_lbl">UTF-8</string>
    <string name="map_msg_get_lbl">Get message &gt;</string>
    <string name="map_msg_get_attachment_lbl">w/attach</string>
    <string name="map_folder_root">/</string>
    <string name="map_folder_up">..</string>
    <string name="map_folder_enter">-></string>
    <string name="map_folder_listing">list</string>
    <string name="map_folder_listing_size">size</string>
    <string name="map_message_listing">Get Message Listing</string>
    <string name="map_message_listing_size">Get Message Listing Size</string>
    <string name="map_update_inbox">Update Inbox</string>
    <string name="map_delete_message">Delete</string>
    <string name="map_max_list_count_prompt">Max list count:</string>
    <string name="map_list_start_offset_prompt">Start offset:</string>
    <string name="map_subject_length_prompt">Subject length:</string>
    <string name="map_parameter_subject">Subject</string>
    <string name="map_parameter_datetime">Datetime</string>
    <string name="map_parameter_sender_name">Sender Name</string>
    <string name="map_parameter_sender_addressing">Sender Addressing</string>
    <string name="map_parameter_recipient_name">Recipient Name</string>
    <string name="map_parameter_recipient_addressing">Recipient Addressing</string>
    <string name="map_parameter_type">Type</string>
    <string name="map_parameter_size">Size</string>
    <string name="map_parameter_reception_status">Reception Status</string>
    <string name="map_parameter_text">Text</string>
    <string name="map_parameter_attachment_size">Attachment Size</string>
    <string name="map_parameter_priority">Priority</string>
    <string name="map_parameter_read">Read</string>
    <string name="map_parameter_sent">Sent</string>
    <string name="map_parameter_protected">Protected</string>
    <string name="map_parameter_replyto_addressing">Replayto Addressing</string>
    <string name="map_message_parameters">Parameters</string>
    <string name="map_message_filter">Filter</string>
    <string name="map_msg_row_from">&lt;</string>
    <string name="map_msg_row_to">&gt;</string>
    <string name="map_msg_type_sms_gsm">SMS GSM</string>
    <string name="map_msg_type_sms_cdma">SMS CDMA</string>
    <string name="map_msg_type_email">EMAIL</string>
    <string name="map_msg_type_mms">MMS</string>
    <string name="map_filter_any_status">Any status</string>
    <string name="map_filter_any_priority">Any priority</string>
    <string name="map_filter_without_message_type">Filter out message type:</string>
    <string name="map_filter_read_status">Read status:</string>
    <string name="map_filter_read_status_unread">Unread</string>
    <string name="map_filter_read_status_read">Read</string>
    <string name="map_filter_priority">Priority:</string>
    <string name="map_filter_priority_high">High</string>
    <string name="map_filter_priority_non_high">Non-high</string>
    <string name="map_filter_period_begin">Period begin:</string>
    <string name="map_filter_period_end">Period end:</string>
    <string name="map_filter_recipient">Recipient:</string>
    <string name="map_filter_originator">Originator:</string>
    <string name="map_messages_list_empty">No messages found!</string>
    <string name="map_set_read">Set READ</string>
    <string name="map_set_unread">Set UNREAD</string>
    <string name="map_recipients_prompt">Recipients:</string>
    <string name="map_originators_prompt">Originators:</string>
    <string name="map_bmsg_status_prompt">Status:</string>
    <string name="map_bmsg_type_prompt">Type:</string>
    <string name="map_bmsg_folder_prompt">Folder:</string>
    <string name="map_bbody_encoding_prompt">Encoding:</string>
    <string name="map_bbody_charset_prompt">Charset:</string>
    <string name="map_bbody_language_prompt">Language:</string>
    <string name="map_report_notif_ticker">New MAP notification report received!</string>
    <string name="map_report_notif_title_delivery_success">Delivery success</string>
    <string name="map_report_notif_title_sending_success">Sending success</string>
    <string name="map_report_notif_title_delivery_failure">Delivery failure</string>
    <string name="map_report_notif_title_sending_failure">Sending failure</string>
    <string name="map_report_notif_title_memory_full">Memory full</string>
    <string name="map_report_notif_title_memory_available">Memory available</string>
    <string name="map_report_notif_title_message_deleted">Message deleted</string>
    <string name="map_report_notif_received">Received new %1$s message</string>
    <string name="map_report_notif_handle">Handle: %1$s</string>
    <string name="map_report_notif_shifted">Message %1$s shifted</string>
    <string name="map_report_notif_fromto">From %1$s to %2$s</string>
    <string-array name="map_message_type_array">
        <item>SMS_GSM</item>
        <item>SMS_CDMA</item>
        <item>EMAIL</item>
        <item>MMS</item>
    </string-array>
    <string-array name="map_message_encoding_array">
        <item></item>
        <item>8BIT</item>
        <item>G-7BIT</item>
        <item>G-7BITEXT</item>
        <item>G-UCS2</item>
        <item>G-8BIT</item>
        <item>C-8BIT</item>
        <item>C-EPM</item>
        <item>C-7ASCII</item>
        <item>C-IA5</item>
        <item>C-UNICODE</item>
        <item>C-SJIS</item>
        <item>C-KOREAN</item>
        <item>C-LATINHEB</item>
        <item>C-LATIN</item>
    </string-array>
    <string-array name="phonebook_arrays">
        <item>telecom/pb.vcf</item>
        <item>telecom/ich.vcf</item>
        <item>telecom/och.vcf</item>
        <item>telecom/mch.vcf</item>
        <item>telecom/cch.vcf</item>
        <item>SIM1/telecom/pb.vcf</item>
        <item>SIM1/telecom/ich.vcf</item>
        <item>SIM1/telecom/och.vcf</item>
        <item>SIM1/telecom/mch.vcf</item>
        <item>SIM1/telecom/cch.vcf</item>
    </string-array>
    <string name="contact_phonelist_hdr">Phone list</string>
    <string name="call_action_accept">Accept</string>
    <string name="call_action_hold_and_accept">Hold and accept</string>
    <string name="call_action_release_and_accept">Release and accept</string>
    <string name="call_action_reject">Reject</string>
    <string name="call_action_terminate">Terminate</string>
    <string name="call_action_hold">Hold</string>
    <string name="call_action_respond_and_hold">Respond and hold</string>
    <string name="call_action_private_mode">Private mode</string>
    <string name="call_action_explicit_transfer">Explicit transfer</string>
</resources>