<!--
/*
 * Copyright (c) 2013, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *        * Redistributions of source code must retain the above copyright
 *            notice, this list of conditions and the following disclaimer.
 *        * Redistributions in binary form must reproduce the above copyright
 *            notice, this list of conditions and the following disclaimer in the
 *            documentation and/or other materials provided with the distribution.
 *        * Neither the name of The Linux Foundation nor
 *            the names of its contributors may be used to endorse or promote
 *            products derived from this software without specific prior written
 *            permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT ARE DISCLAIMED.    IN NO EVENT SHALL THE COPYRIGHT OWNER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <CheckBox
                android:id="@+id/filter_chooser_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_version" />
            <CheckBox
                android:id="@+id/filter_chooser_fn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_fn" />
            <CheckBox
                android:id="@+id/filter_chooser_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_n" />
            <CheckBox
                android:id="@+id/filter_chooser_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_photo" />
            <CheckBox
                android:id="@+id/filter_chooser_bday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_bday" />
            <CheckBox
                android:id="@+id/filter_chooser_adr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_adr" />
            <CheckBox
                android:id="@+id/filter_chooser_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_label" />
            <CheckBox
                android:id="@+id/filter_chooser_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_tel" />
            <CheckBox
                android:id="@+id/filter_chooser_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_email" />
            <CheckBox
                android:id="@+id/filter_chooser_mailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_mailer" />
            <CheckBox
                android:id="@+id/filter_chooser_tz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_tz" />
            <CheckBox
                android:id="@+id/filter_chooser_geo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_geo" />
            <CheckBox
                android:id="@+id/filter_chooser_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_title" />
            <CheckBox
                android:id="@+id/filter_chooser_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_role" />
            <CheckBox
                android:id="@+id/filter_chooser_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/filter_chooser_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_agent" />
            <CheckBox
                android:id="@+id/filter_chooser_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_org" />
            <CheckBox
                android:id="@+id/filter_chooser_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_note" />
            <CheckBox
                android:id="@+id/filter_chooser_rev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_rev" />
            <CheckBox
                android:id="@+id/filter_chooser_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_sound" />
            <CheckBox
                android:id="@+id/filter_chooser_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_url" />
            <CheckBox
                android:id="@+id/filter_chooser_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_uid" />
            <CheckBox
                android:id="@+id/filter_chooser_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_key" />
            <CheckBox
                android:id="@+id/filter_chooser_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_nickname" />
            <CheckBox
                android:id="@+id/filter_chooser_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_categories" />
            <CheckBox
                android:id="@+id/filter_chooser_proid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_proid" />
            <CheckBox
                android:id="@+id/filter_chooser_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_class" />
            <CheckBox
                android:id="@+id/filter_chooser_sort_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_sort_string" />
            <CheckBox
                android:id="@+id/filter_chooser_x_irmc_call_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_x_irmc_call_datetime" />
            <CheckBox
                android:id="@+id/filter_chooser_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_field_filter" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
