<!--
/*
 * Copyright (c) 2013, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *        * Redistributions of source code must retain the above copyright
 *            notice, this list of conditions and the following disclaimer.
 *        * Redistributions in binary form must reproduce the above copyright
 *            notice, this list of conditions and the following disclaimer in the
 *            documentation and/or other materials provided with the distribution.
 *        * Neither the name of The Linux Foundation nor
 *            the names of its contributors may be used to endorse or promote
 *            products derived from this software without specific prior written
 *            permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT ARE DISCLAIMED.    IN NO EVENT SHALL THE COPYRIGHT OWNER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/param_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_subject" />

        <CheckBox
            android:id="@+id/param_datatime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_datetime" />

        <CheckBox
            android:id="@+id/param_sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_sender_name" />

        <CheckBox
            android:id="@+id/param_sender_addressing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_sender_addressing" />

        <CheckBox
            android:id="@+id/param_receipent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_recipient_name" />

        <CheckBox
            android:id="@+id/param_receipent_addressing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_recipient_addressing" />

        <CheckBox
            android:id="@+id/param_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_type" />

        <CheckBox
            android:id="@+id/param_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_size" />

        <CheckBox
            android:id="@+id/param_reception_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_reception_status" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

         <CheckBox
            android:id="@+id/param_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_text" />

        <CheckBox
            android:id="@+id/param_attachment_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_attachment_size" />

        <CheckBox
            android:id="@+id/param_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_priority" />

        <CheckBox
            android:id="@+id/param_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_read" />

        <CheckBox
            android:id="@+id/param_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_sent" />

        <CheckBox
            android:id="@+id/param_protected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_protected" />

        <CheckBox
            android:id="@+id/param_replayto_addressing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_parameter_replyto_addressing" />

    </LinearLayout>

</LinearLayout>
