<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2013, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *        * Redistributions of source code must retain the above copyright
 *            notice, this list of conditions and the following disclaimer.
 *        * Redistributions in binary form must reproduce the above copyright
 *            notice, this list of conditions and the following disclaimer in the
 *            documentation and/or other materials provided with the distribution.
 *        * Neither the name of The Linux Foundation nor
 *            the names of its contributors may be used to endorse or promote
 *            products derived from this software without specific prior written
 *            permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT ARE DISCLAIMED.    IN NO EVENT SHALL THE COPYRIGHT OWNER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/calls_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <Button
                android:id="@+id/call_action_accept"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_accept" />

            <Button
                android:id="@+id/call_action_hold_and_accept"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_hold_and_accept" />

            <Button
                android:id="@+id/call_action_release_and_accept"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_release_and_accept" />

            <Button
                android:id="@+id/call_action_reject"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_reject" />

            <Button
                android:id="@+id/call_action_terminate"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_terminate" />

            <Button
                android:id="@+id/call_action_hold"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_hold" />

            <Button
                android:id="@+id/call_action_respond_and_hold"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_respond_and_hold" />

            <Button
                android:id="@+id/call_action_private_mode"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_private_mode" />

            <Button
                android:id="@+id/call_action_explicit_transfer"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/call_action_explicit_transfer" />

    </LinearLayout>

</LinearLayout>
